# pfc-execution-boundary-proof

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: COMPARISON.md  EXECUTION_BOUNDARY.md  RECEIPT_SCHEMA.md  THREAT_MODEL.md
examples/: ai_deploy_request.json  missing_evidence_request.json  payment_release_request.json  stale_context_request.json  unauthorized_actor_request.json
pfc_boundary_proof/: __init__.py
src/pfc_boundary_proof/: __init__.py  canonical_json.py  cli.py  evaluator.py  models.py  policies.py  receipts.py  replay.py  scenarios.py
tests/: test_allow_receipt.py  test_canonical_json.py  test_deny_receipt.py  test_expired_receipt.py  test_payload_tamper.py  test_policy_hash.py  test_replay.py
